# webmux

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PLAN.md  QUICKSTART.md  README.md  TESTING.md  config.example.yaml  config.virtual.yaml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.github/workflows/: release.yml  test.yml
scripts/: docker-entrypoint.sh  setup-virtual-ports.sh
src/: lib.rs  main.rs
src/config/: mod.rs  tests.rs
src/logging/: mod.rs
src/serial/: connection.rs  mod.rs
src/web/: handler_tests.rs  handlers.rs  mod.rs  tests.rs
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: integration_tests.rs
tests/ui/: README.md  webmux.spec.ts
